--- a/motivateme/app/theme/app.core.scss
+++ b/motivateme/app/theme/app.core.scss
@@ -8,3 +8,5 @@
 // App Shared Sass variables belong in app.variables.scss.
 
 @import "../pages/home/home";
+@import "../components/clip-group/clip-group";
+@import "../components/clip-view/clip-view";
