Add colorsgit reset HEAD server/rails/Gemfile

--- a/motivateme/app/components/clip-group/clip-group.html
+++ b/motivateme/app/components/clip-group/clip-group.html
@@ -5,6 +5,7 @@
     [style.left]="c.position.left"
     [style.top]="c.position.top"
     [style.transform]="'translateX(-50%)'"
+    [style.color]="c.color"
   >
   </clip-view>
 </div>
